Div com malt & hops

--- a/index.html
+++ b/index.html
@@ -50,11 +50,15 @@
                    <div class="text_info">
                        <h1>Cold & Delicious!</h1>
                        <h2>It's never too late to taste our beers.</h2>
-                       <div><a href="">options</a></div>
+                       <div><a href="">come see</a></div>
                    </div>
                 </div>
                 <div class="produto2">
-                    
+                    <div class="ing_info">
+                        <h1>Malt & Hops</h1>
+                        <h2>Our malt and hops are of high quality</h2>
+                        <div><a href="">come see</a></div>
+                    </div>
                 </div>
             </div>
         </section>
