--- a/index.html
+++ b/index.html
@@ -56,12 +56,29 @@
                 <div class="produto2">
                     <div class="ing_info">
                         <h1>Malt & Hops</h1>
-                        <h2>Our malt and hops are of high quality</h2>
+                        <h2>Our malt and hops are of high quality!</h2>
                         <div><a href="">come see</a></div>
                     </div>
                 </div>
             </div>
         </section>
+        <section id="banner_bottom">
+            <div class="container_bottom">
+                <div class="item_box"><a href=""><i class="fas fa-wine-bottle fa-3x" aria-hidden="true"></i></br> cervejas</a></div>
+                <div class="item_box"><a href=""><i class="fab fa-raspberry-pi fa-3x" aria-hidden="true"></i></br> acessórios</a></div>
+                <div class="item_box"><a href=""><i class="fas fa-tshirt fa-3x" aria-hidden="true"></i></br> vestuário</a></div>
+                <div class="item_box"><a href=""><i class="fas fa-box-open fa-3x" aria-hidden="true"></i></br> kits presentes</a></div>
+                <div class="item_box"><a href=""><i class="fas fa-laptop-house fa-3x" aria-hidden="true"></i></br> lojas</a></div>
+                <div class="item_box"><a href=""><i class="fas fa-certificate fa-3x" aria-hidden="true"></i></br> indicações</a></div>
+            </div>
+        </section>
+
+        <footer>
+            <div class="info_footer">
+                <div class="desenv"><a href="https://github.com/AlanGabHahn" target="_blank"><i class="fas fa-feather-alt fa-2x" aria-hidden="true"></i>    Alan Hahn</a></div>
+                <div class="date_desenv">Desenvolvido em feb/2022</div>
+            </div>
+        </footer>
 
     </body>
 
